--- a/views/home.html
+++ b/views/home.html
@@ -1,5 +1,13 @@
 <div class="container">
    
-    <h1>Bienvenido!</h1>    
+    <h2>Novedades</h2> 
+
+    <div class="card hoverable z-depth-1" ng-repeat="entry in news">
+        <div class="card-content">
+            <h3>{{entry.title}}</h3>
+            <div ng-bind-html=entry.content></div>
+        </div>
+    </div>    
+
 
 </div>
