--- a/views/login.html
+++ b/views/login.html
@@ -38,10 +38,10 @@
 
                 <div class="row">
                     <label style="float:right;">
-                        <a href="" class="green-text" ng-click="login_mode = login_mode == 0 ? 2 : login_mode - 1; update_buttons();"><b>{{menu_right}}</b></a>
+                        <a href="" class="green-text" ng-click="login_mode = login_mode == 0 ? 2 : login_mode - 1; updateButtons();"><b>{{menu_right}}</b></a>
                     </label>
                     <label style="float:left;">
-                        <a href="" class="green-text" ng-click="login_mode = login_mode == 2 ? 0 : login_mode + 1; update_buttons();"><b>{{menu_left}}</b></a>
+                        <a href="" class="green-text" ng-click="login_mode = login_mode == 2 ? 0 : login_mode + 1; updateButtons();"><b>{{menu_left}}</b></a>
                     </label>
                 </div>
 
