--- a/views/activities.html
+++ b/views/activities.html
@@ -1,11 +1,4 @@
-<div class="container">
-   
-    <h1>Actividades</h1> 
+<center>
+    <div id="chart"></div>
+</center>
 
-    <div class="row">
-        <div class="card hoverable" id="canvas-holder">
-                <div id="chartContainer"></div>
-        </div>
-    </div>
-
-</div>
