--- a/views/activities.html
+++ b/views/activities.html
@@ -1,4 +1,9 @@
-<center>
-    <div id="chart"></div>
-</center>
+<div class="container">
+    <div class="card hoverable z-depth-1">
+        <div class="card-content">
+            <div id="container"></div>
+        </div>
+    </div>
+</div>
+
 
