Dashboard del sistema con grafico sunburst y grafico polar de calificaciones

--- a/views/login.html
+++ b/views/login.html
@@ -1,5 +1,5 @@
 <center>
-    <div class="container black-text" style="margin-top: 80px;" style="z-index:-2">
+    <div ng-show="userLogged==false" class="container black-text" style="margin-top: 80px;" style="z-index:-2">
         <div class="z-depth-1 row hoverable login-box" style="z-index:1; width:{{login_mode==1 ? '600px':'400px'}}">
             <div>
                 <a><img src="images/mainlogo.png" width="150px" /></a>
