--- a/style/custom.css
+++ b/style/custom.css
@@ -28,3 +28,8 @@
   padding: 32px 48px 0px 48px; 
   background: rgba(210, 210, 210, 0.7)!important;
 }
+
+/* Ocultar boton de drillup de sunburst */
+.highcharts-drillup-button {
+  display: none
+}
