Vista de cronograma de actividades con fullcalendar. TODO: creacion, edicion y eliminacion de eventos.

--- a/views/calendar.html
+++ b/views/calendar.html
@@ -4,7 +4,7 @@
 
     <div class="card hoverable z-depth-1">
         <div class="card-content">
-            <div class="material-theme green" id="calendar"></div>
+            <div id="calendar"></div>
         </div>
     </div>
 
