Formularios para poner calificaciones y fechas de entregas

--- a/views/calendar.html
+++ b/views/calendar.html
@@ -32,6 +32,7 @@
     <div class="modal-content">
         <h5>Confirme la operación</h5>
         <p>¿Está seguro que desea eliminar el evento seleccionado?</p>
+        <p>Tenga en cuenta que esta acción modificará el porcentaje de progreso de la materia y puede alterar las calificaciones de los usuarios alumnos.</p>
         <p>Esta operación no se puede deshacer.</p>
     </div>
     
