--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -1,3 +1,6 @@
+<div class="container">
+    <h3>Dashboard</h3>
+</div>
 <div class="row">
     <div class="col s12 m6 l6">
         <div class="card hoverable z-depth-1">
