--- a/views/home.html
+++ b/views/home.html
@@ -1,10 +1,13 @@
 <div class="container">
    
-    <h2>Novedades</h2> 
+    <h3>Novedades</h3> 
 
     <div class="card hoverable z-depth-1" ng-repeat="entry in news">
         <div class="card-content" ng-show="entry.timestamp < now"> 
-            <p class="right">Publicado {{relativeTime(entry.timestamp)}} por {{users[entry.author].name}} {{users[entry.author].secondName}} </p>
+            <div class="right chip">
+                <img src="{{users[entry.author].avatar}}">
+                Publicado {{relativeTime(entry.timestamp)}} por {{users[entry.author].name}}
+            </div>
             <h3>{{entry.title}}</h3>
             <div ng-bind-html=entry.content></div>
         </div>
