--- a/views/users.html
+++ b/views/users.html
@@ -1,36 +1,164 @@
 <div class="container">
-    
-    <!-- Lista de usuarios -->
-    <div class = "section"> 
-      <h5 class="row" ng-if="users">Usuarios</h5>
-      <table class="highlight responsive-table" ng-if="users">
-        <thead>
-          <tr>
-            <th>Foto</th>
-            <th>Nombre</th>
-            <th>LU</th>
-            <th>E-Mail</th>
-            <th>Último acceso</th>
-            <th>Acciones</th>
-          </tr>
-        </thead>
-  
-        <tbody>
-          <tr ng-repeat="(key,row) in users">
-            <td><img class="circle" src="{{row.avatar}}" height="50px" width="50px"></td>
-            <td>{{row.name}} {{row.secondName}}</td>
-            <td>{{row.lu}}</td>
-            <td>{{row.email}}</td>
-            <td>{{relativeTime(row.last_login)}}</td>
-            <td width="1%" style="white-space:nowrap;">
-              <a title="Enviar mensaje" class="waves-effect waves-light teal btn-small btn-floating z-depth=3"><i class="material-icons">mail_outline</i></a>
-              <a title="Calificar" class="waves-effect waves-light purple btn-floating btn-small z-depth=3"><i class="material-icons">done_all</i></a>
-              <a title="Permisos" class="waves-effect waves-light red btn-floating btn-small z-depth=3"><i class="material-icons">security</i></a>
-            </td>
-          </tr>      
-        </tbody>
-      </table>
-    </div>
-  
+  <!-- Lista de usuarios -->
+  <div class = "section"> 
+    <h5 class="row" ng-if="users">Usuarios</h5>
+    <table class="highlight responsive-table" ng-if="users">
+      <thead>
+        <tr>
+          <th>Foto</th>
+          <th>Nombre</th>
+          <th>Menu</th>
+        </tr>
+      </thead>
 
+      <tbody>
+        <tr class="modal-trigger" data-target="view_modal" ng-repeat="(key,row) in users" ng-click="select(key)">
+          <td><img class="circle" src="{{row.avatar}}" height="50px" width="50px"></td>
+          <td class="{{row.enrolled ? '':'red-text'}}">{{row.name}} {{row.secondName}}  <i class="material-icons" style="vertical-align:middle;" ng-if="row.admin">security</i></td>
+          <td width="1%" style="white-space:nowrap;">
+            <a title="Enviar mensaje" class="waves-effect waves-light teal btn-small btn-floating z-depth=3 modal-trigger" data-target="message_modal"><i class="material-icons">mail_outline</i></a>
+            <a title="Calificaciones" class="waves-effect waves-light orange btn-floating btn-small z-depth=3 modal-trigger" data-target="scores_modal" ng-show="row.enrolled" ng-click="startScoresModal(key)"><i class="material-icons">playlist_add_check</i></a>
+            <a title="Aprobar" class="waves-effect waves-light red btn-floating btn-small z-depth=3 modal-trigger" data-target="confirm_enroll_modal" ng-hide="row.enrolled"><i class="material-icons">done_outline</i></a>
+          </td>
+        </tr>      
+      </tbody>
+    </table>
   </div>
+</div>
+
+<div id="scores_modal" class="modal wide-modal">
+    <div class="modal-content">
+      
+      <h5><b>Alumno:</b> {{users[selectedKey].name}} {{users[selectedKey].secondName}}</h5>
+      <h5><b>LU:</b> {{users[selectedKey].lu}}</h5>
+      <div class="divider"></div>
+      
+      <h4>Calificaciones</h4>
+
+      <div class = "section"> 
+          <table class="highlight responsive-table">
+            <thead>
+              <tr>
+                <th>Actividad</th>
+                <th>Nota</th>
+                <th>Valor</th>
+                <th>Evaluó</th>
+                <th>Fecha</th>
+              </tr>
+            </thead>
+      
+            <tbody>
+              <tr class="{{auxiliaryScores[row.id].score!=users[selectedKey].scores[row.id].score?'red-text':''}}" 
+              ng-repeat="(key,row) in activities" ng-if="row.value">
+                <td>{{row.name}}</td>
+                <td>    
+                  <div class="input-field" >
+                      <input class="{{auxiliaryScores[row.id].score!=users[selectedKey].scores[row.id].score?'red-text':''}}" 
+                      type="number" min="0" max="100" step="1" ng-model="auxiliaryScores[row.id].score"
+                      ng-change="auxiliaryScores[row.id].evaluator=user.uid;auxiliaryScores[row.id].timestamp=readableTime(null,false)">
+                  </div>                  
+                </td>
+                <td>{{row.value}}</td>
+                <td>
+                  <div class="chip" ng-if="auxiliaryScores[row.id].evaluator">
+                    <img src="{{users[auxiliaryScores[row.id].evaluator].avatar}}">
+                    {{users[auxiliaryScores[row.id].evaluator].name}}
+                  </div>
+                </td>
+                <td>
+                  <p ng-show="auxiliaryScores[row.id]">{{readableTime(auxiliaryScores[row.id].timestamp)}}</p>
+                </td>
+              </tr>      
+            </tbody>
+          </table>
+        </div>
+
+        <h4>Fechas de entregas</h4>
+
+        <div class = "section"> 
+          <table class="highlight responsive-table">
+            <thead>
+              <tr>
+                <th>Actividad</th>
+                <th>Vencimiento</th>
+                <th>Entrega</th>
+                <th>Evaluó</th>
+                <th>Fecha</th>
+              </tr>
+            </thead>
+      
+            <tbody>
+              <tr class="{{auxiliarySubmits[row.id].submitted!=users[selectedKey].submits[row.id].submitted?'red-text':''}}" 
+              ng-repeat="(key,row) in activities track by $index" ng-if="row.dl">
+                <td>{{row.name}}</td>
+                <td>{{readableTime(row.dl,false)}}</td>
+                <td>    
+                  <input type="date" id="{{row.id}}">
+                </td>
+                <td>
+                  <div class="chip" ng-if="auxiliarySubmits[row.id].evaluator">
+                    <img src="{{users[auxiliarySubmits[row.id].evaluator].avatar}}">
+                    {{users[auxiliarySubmits[row.id].evaluator].name}}
+                  </div>
+                </td>
+                <td>
+                  <p ng-show="auxiliarySubmits[row.id]">{{readableTime(auxiliarySubmits[row.id].timestamp)}}</p>
+                </td>
+              </tr>      
+            </tbody>
+          </table>
+        </div>    
+    
+    <div class="modal-footer">      
+      <a class="modal-close waves-effect waves-white btn green">Cancelar</a>
+      <a class="waves-effect waves-white btn red" ng-click="saveScores()">Guardar</a>
+    </div>
+  </div>
+
+<div id="view_modal" class="modal wide-modal">
+  <div class="modal-content">
+    <div class="row">
+      <div class="col s3">
+        <img class="responsive-img" src="{{users[selectedKey].avatar}}"></a>
+      </div>
+      <div class="col s6">
+        <h4>{{users[selectedKey].name}} {{users[selectedKey].secondName}} <a ng-if="users[selectedKey].admin">[admin]</a></h4>
+        <h5 class="truncate"><i>{{users[selectedKey].email}}</i></h5>		
+        <h5><b>LU:</b> <i>{{users[selectedKey].lu}}</i></h5>		
+        <h5 class="truncate"><i>{{users[selectedKey].degree}}</i></h5>				
+        <p><b>Usuario desde:</b> <i>{{users[selectedKey].enrolled?readableTime(users[selectedKey].enrolled,true):"(Usuario no aprobado)"}}</i></p>
+      </div>	
+    </div>
+  </div>
+</div>
+
+<div id="message_modal" class="modal">
+  <div class="modal-content">
+    <h5>Enviar mensaje</h5>
+    <p>Para {{users[selectedKey].name}} ({{users[selectedKey].email}})</p>
+    <div class="input-field col s12">
+      <textarea id="textarea" class="materialize-textarea" ng-model="message"></textarea>
+      <label for="textarea">Mensaje</label>
+    </div>
+  </div>
+
+  <div class="modal-footer">      
+    <a class="modal-close waves-effect waves-white btn green">Cancelar</a>
+    <a class="waves-effect waves-white btn red" ng-click="sendMessage()">Enviar</a>
+  </div>
+</div> 
+
+<div id="confirm_enroll_modal" class="modal">
+  <div class="modal-content">
+    
+    <h5>Confirme la operación</h5>
+    <p>¿Desea aprobar el registro del usuario {{users[selectedKey].name}} {{users[selectedKey].secondName}} como alumno?</p>
+    <p>El usuario aparecerá en los listados de alumnos para tomar asistencia o evaluar calificaciones y podrá ver el progreso de sus notas en la sección de dashboard.</p>
+  </div>
+
+  <div class="modal-footer">      
+    <a class="modal-close waves-effect waves-white btn green">Cancelar</a>
+    <a class="waves-effect waves-white btn red" ng-click="enrollUser()">Confirmar</a>
+  </div>
+</div>
+
