--- a/views/calendar.html
+++ b/views/calendar.html
@@ -23,8 +23,8 @@
     </div>
 
     <div class="modal-footer" ng-show="user.admin">      
-        <a class="modal-close waves-effect waves-white btn red modal-trigger" data-target="confirm_delete_modal">Eliminar</a>
-        <a class="modal-close waves-effect waves-white btn green modal-trigger" data-target="edit_modal" ng-click="editEvent(false)">Editar</a>
+        <a class="modal-close waves-effect waves-white btn red darken-4 modal-trigger" data-target="confirm_delete_modal">Eliminar</a>
+        <a class="modal-close waves-effect waves-white btn green darken-4 modal-trigger" data-target="edit_modal" ng-click="editEvent(false)">Editar</a>
     </div>
 </div>
 
@@ -37,8 +37,8 @@
     </div>
     
     <div class="modal-footer">      
-        <a class="modal-close waves-effect waves-white btn green">Cancelar</a>
-        <a class="waves-effect waves-white btn red" ng-click="deleteEvent()">Eliminar</a>
+        <a class="modal-close waves-effect waves-white btn green darken-4">Cancelar</a>
+        <a class="waves-effect waves-white btn red darken-4" ng-click="deleteEvent()">Eliminar</a>
     </div>
 </div>
 
@@ -49,8 +49,8 @@
     </div>
     
     <div class="modal-footer">      
-        <a class="modal-close waves-effect waves-white btn green" ng-click="refreshCalendar()">Cancelar</a>
-        <a class="waves-effect waves-white btn teal" ng-click="moveEvent()">Confirmar</a>
+        <a class="modal-close waves-effect waves-white btn green darken-4" ng-click="refreshCalendar()">Cancelar</a>
+        <a class="waves-effect waves-white btn teal darken-4" ng-click="moveEvent()">Confirmar</a>
     </div>
 </div>
 
@@ -97,8 +97,8 @@
     </div>
 
     <div class="modal-footer">      
-        <a class="modal-close waves-effect waves-white btn red">Cancelar</a>
-        <a class="waves-effect waves-white btn green" ng-click="saveEvent()">Guardar</a>
+        <a class="modal-close waves-effect waves-white btn red darken-4">Cancelar</a>
+        <a class="waves-effect waves-white btn green darken-4" ng-click="saveEvent()">Guardar</a>
     </div>
 </div>
 
