--- a/views/login.html
+++ b/views/login.html
@@ -48,16 +48,16 @@
                 </div>
 
                 <div class="row">
-                    <button type="submit" name="btn_login" class="col s12 btn btn-large waves-effect green darken-2"
+                    <button type="submit" name="btn_login" class="col s12 btn btn-large waves-effect green darken-4"
                         ng-click="btn_click();">{{btn_text}}</button>
                 </div>
 
                 <div class="row">
                     <label style="float:right;">
-                        <a href="" class="green-text" ng-click="login_mode = login_mode == 0 ? 2 : login_mode - 1; updateButtons();"><b>{{menu_right}}</b></a>
+                        <a href="" class="green-text text-darken-4" ng-click="login_mode = login_mode == 0 ? 2 : login_mode - 1; updateButtons();"><b>{{menu_right}}</b></a>
                     </label>
                     <label style="float:left;">
-                        <a href="" class="green-text" ng-click="login_mode = login_mode == 2 ? 0 : login_mode + 1; updateButtons();"><b>{{menu_left}}</b></a>
+                        <a href="" class="green-text text-darken-4" ng-click="login_mode = login_mode == 2 ? 0 : login_mode + 1; updateButtons();"><b>{{menu_left}}</b></a>
                     </label>
                 </div>
 
