--- a/views/users.html
+++ b/views/users.html
@@ -2,7 +2,7 @@
   <!-- Lista de usuarios -->
   <div class = "section"> 
     <h5 class="row" ng-if="users">Usuarios</h5>
-    <table class="highlight responsive-table" ng-if="users">
+    <table class="highlight" ng-if="users">
       <thead>
         <tr>
           <th>Foto</th>
@@ -38,7 +38,7 @@
       <h4>Calificaciones</h4>
 
       <div class = "section"> 
-          <table class="highlight responsive-table">
+          <table class="highlight">
             <thead>
               <tr>
                 <th>Actividad</th>
@@ -78,7 +78,7 @@
         <h4>Entregas</h4>
 
         <div class = "section"> 
-          <table class="highlight responsive-table">
+          <table class="highlight">
             <thead>
               <tr>
                 <th>Actividad</th>
@@ -116,8 +116,8 @@
         </div>    
     
     <div class="modal-footer">      
-      <a class="modal-close waves-effect waves-white btn green">Cancelar</a>
-      <a class="waves-effect waves-white btn red" ng-click="saveScores()">Guardar</a>
+      <a class="modal-close waves-effect waves-white btn green darken-4">Cancelar</a>
+      <a class="waves-effect waves-white btn red darken-4" ng-click="saveScores()">Guardar</a>
     </div>
   </div>
 </div>
@@ -150,8 +150,8 @@
   </div>
 
   <div class="modal-footer">      
-    <a class="modal-close waves-effect waves-white btn green">Cancelar</a>
-    <a class="waves-effect waves-white btn red" ng-click="sendMessage()">Enviar</a>
+    <a class="modal-close waves-effect waves-white btn green darken-4">Cancelar</a>
+    <a class="waves-effect waves-white btn red darken-4" ng-click="sendMessage()">Enviar</a>
   </div>
 </div> 
 
@@ -164,8 +164,8 @@
   </div>
 
   <div class="modal-footer">      
-    <a class="modal-close waves-effect waves-white btn green">Cancelar</a>
-    <a class="waves-effect waves-white btn red" ng-click="enrollUser()">Confirmar</a>
+    <a class="modal-close waves-effect waves-white btn green darken-4">Cancelar</a>
+    <a class="waves-effect waves-white btn red darken-4" ng-click="enrollUser()">Confirmar</a>
   </div>
 </div>
 
