--- a/views/profile.html
+++ b/views/profile.html
@@ -19,7 +19,7 @@
 
 		<div class="row">
 			<div class="col offset-s6 s6">
-				<button ng-click="edit=true" type="button" class="btn green darken-3">Editar perfil</button>
+				<button ng-click="edit=true" type="button" class="btn green darken-4">Editar perfil</button>
 			</div>
 		</div>
 	</div>
@@ -65,8 +65,8 @@
 		</div>
 
 		<div class="row">
-			<button ng-click="saveForm()" type="button" class="btn-large green right">Guardar</button>
-			<button ng-click="edit=false" type="button" class="btn-large red right">Descartar</button>
+			<button ng-click="saveForm()" type="button" class="btn-large green darken-4 right">Guardar</button>
+			<button ng-click="edit=false" type="button" class="btn-large red darken-4 right">Descartar</button>
 		</div>	
 	</div>
 
