Fix modals de calendar. Control de visibilidad. Listados de materiales

--- a/views/calendar.html
+++ b/views/calendar.html
@@ -1,6 +1,6 @@
 <div class="container">
-   
-    <h1>Cronograma</h1> 
+
+    <h1>Cronograma</h1>
 
     <div class="card hoverable z-depth-1">
         <div class="card-content">
@@ -11,7 +11,7 @@
 </div>
 
 <div class="fixed-action-btn" ng-show="user.admin">
-    <a title="Nuevo" class="btn-floating btn-large green darken-3 pulse modal-trigger" data-target="edit_modal" ng-click="editEvent(true)"><i class="large material-icons">add</i></a>
+    <a title="Nuevo" class="btn-floating btn-large green darken-3 pulse" ng-click="editEvent(true)"><i class="large material-icons">add</i></a>
 </div>
 
 <div id="view_modal" class="modal">
@@ -19,48 +19,23 @@
         <h4>{{selectedEvent.title}}</h4>
         <p ng-bind-html="selectedEvent.info" class="flow-text"></p>
         <div class="divider"></div>
-        <p><b>Día </b>{{selectedEventExtras.startDay}}, de {{selectedEventExtras.startTime}} a {{selectedEventExtras.endTime}} ({{selectedEventExtras.fromNow}})</p>
+        <p><b>Día </b>{{selectedEventExtras.startDay}}, de {{selectedEventExtras.startTime}} a
+            {{selectedEventExtras.endTime}} ({{selectedEventExtras.fromNow}})</p>
     </div>
 
-    <div class="modal-footer" ng-show="user.admin">      
-        <a class="modal-close waves-effect waves-white btn red darken-4 modal-trigger" data-target="confirm_delete_modal">Eliminar</a>
-        <a class="modal-close waves-effect waves-white btn green darken-4 modal-trigger" data-target="edit_modal" ng-click="editEvent(false)">Editar</a>
+    <div class="modal-footer" ng-show="user.admin">
+        <a class="waves-effect waves-white btn red darken-4" ng-click="confirmDeleteEvent()">Eliminar</a>
+        <a class="waves-effect waves-white btn green darken-4" ng-click="editEvent(false)">Editar</a>
     </div>
 </div>
 
-<div id="confirm_delete_modal" class="modal">
-    <div class="modal-content">
-        <h5>Confirme la operación</h5>
-        <p>¿Está seguro que desea eliminar el evento seleccionado?</p>
-        <p>Tenga en cuenta que esta acción modificará el porcentaje de progreso de la materia y puede alterar las calificaciones de los usuarios alumnos.</p>
-        <p>Esta operación no se puede deshacer.</p>
-    </div>
-    
-    <div class="modal-footer">      
-        <a class="modal-close waves-effect waves-white btn green darken-4">Cancelar</a>
-        <a class="waves-effect waves-white btn red darken-4" ng-click="deleteEvent()">Eliminar</a>
-    </div>
-</div>
-
-<div id="confirm_move_modal" class="modal">
-    <div class="modal-content">
-        <h5>Confirme la operación</h5>
-        <p>¿Está seguro que desea cambiar el horario del evento desplazado?</p>
-    </div>
-    
-    <div class="modal-footer">      
-        <a class="modal-close waves-effect waves-white btn green darken-4" ng-click="refreshCalendar()">Cancelar</a>
-        <a class="waves-effect waves-white btn teal darken-4" ng-click="moveEvent()">Confirmar</a>
-    </div>
-</div>
-
-<div id="edit_modal" class="modal wide-modal" ng-show="user.admin">
+<div id="edit_modal" class="modal" ng-show="user.admin">
     <div class="modal-content">
         <h4>Edición de eventos</h4>
         <div class="row">
             <div class="input-field col s12 m6 l6">
                 <input id="title" type="text" ng-model="selectedEvent.title">
-                <label for="title">Título</label>      
+                <label for="title">Título</label>
             </div>
             <div class="input-field col s12 m6 l6">
                 <select id="tag_select">
@@ -75,7 +50,7 @@
                 <label for="tag_select">Etiqueta</label>
             </div>
         </div>
-        
+
         <div class="input-field">
             <textarea id="textarea" class="materialize-textarea" ng-model="selectedEvent.info"></textarea>
             <label for="textarea">Detalles</label>
@@ -96,9 +71,36 @@
         </div>
     </div>
 
-    <div class="modal-footer">      
+    <div class="modal-footer">
         <a class="modal-close waves-effect waves-white btn red darken-4">Cancelar</a>
         <a class="waves-effect waves-white btn green darken-4" ng-click="saveEvent()">Guardar</a>
+    </div>
+</div>
+
+<div id="confirm_delete_modal" class="modal" ng-show="user.admin">
+    <div class="modal-content">
+        <h5>Confirme la operación</h5>
+        <p>¿Está seguro que desea eliminar el evento seleccionado?</p>
+        <p>Tenga en cuenta que esta acción modificará el porcentaje de progreso de la materia y puede alterar las
+            calificaciones de los usuarios alumnos.</p>
+        <p>Esta operación no se puede deshacer.</p>
+    </div>
+
+    <div class="modal-footer">
+        <a class="modal-close waves-effect waves-white btn green darken-4">Cancelar</a>
+        <a class="waves-effect waves-white btn red darken-4" ng-click="deleteEvent()">Eliminar</a>
+    </div>
+</div>
+
+<div id="confirm_move_modal" class="modal" ng-show="user.admin">
+    <div class="modal-content">
+        <h5>Confirme la operación</h5>
+        <p>¿Está seguro que desea cambiar el horario del evento desplazado?</p>
+    </div>
+
+    <div class="modal-footer">
+        <a class="modal-close waves-effect waves-white btn green darken-4" ng-click="refreshCalendar()">Cancelar</a>
+        <a class="waves-effect waves-white btn teal darken-4" ng-click="moveEvent()">Confirmar</a>
     </div>
 </div>
 
